# Vador

./: .asciidoctorconfig  .classpath  .editorconfig  .factorypath  .gitignore  .project  BUILD.bazel  CODEOWNERS  CONTRIBUTING.adoc  CONTRIBUTING.md  JenkinsFile  README.adoc  README.md  build.gradle.kts  gradle.properties  libs.versions.toml  pom.xml  release.properties  renovate.json  settings.gradle.kts  sonar-project.properties
.asciidoctor/: docinfo.html
.github/workflows/: build.yml
buildSrc/: build.gradle.kts  gradle.properties  settings.gradle.kts
config/: baseline.xml
config/detekt/: detekt.yml
detekt/: baseline.xml
docs/: configDSLs.adoc  configDSLs.md  matchers.adoc  matchers.md  requirements.adoc  requirements.md  specs.adoc  specs.md  validation-configuration.adoc  validation-sharing.adoc  validator-types.adoc
docs/config-dsl/: BatchOfBatch1ValidationConfig.adoc  BatchValidationConfig.adoc  ContainerValidationConfig.adoc  ContainerValidationConfigWith2Levels.adoc  FilterDuplicatesConfig.adoc  IDConfig.adoc  NestedBatch1ValidationConfig.adoc  ValidationConfig.adoc  config-driven-validation.adoc  configDSLs.adoc  dsl-driven-configuration.adoc  dsl-driven-validation.adoc  specs.adoc
docs/config-dsls/: BatchOfBatch1ValidationConfig.adoc  BatchValidationConfig.adoc  ContainerValidationConfig.adoc  ContainerValidationConfigLevel2.adoc  NestedBatch1ValidationConfig.adoc  ValidationConfig.adoc  configDSLs.adoc
matchers/: build.gradle.kts
specs/: build.gradle.kts
src/main/java/: Invalid.java  (+3 more)
vader/: build.gradle.kts
vador/: build.gradle.kts
(+686 files in other folders)
